--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,7 +1,14 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
+FROM python:3.9-slim
 
 
 COPY requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
 COPY ./app /app
+
+EXPOSE 8001
+
+WORKDIR /app
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+
