--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,8 +1,16 @@
 FROM python:3.9-slim
 
+RUN apt-get update -y && \
+    apt-get install -y libopencv-dev libgl1-mesa-dev
+
 
 COPY requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
+
+# For YOLOv5
+COPY ./app/libs/vision/yolov5/requirements.txt /requirements.yolov5.txt
+RUN pip install -r /requirements.yolov5.txt
+
 
 COPY ./app /app
 
