--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "app/libs/vision/yolov5"]
 	path = app/libs/vision/yolov5
-	url = https://github.com/ultralytics/yolov5
+	url = git@github.com:reouno/yolov5.git
+	branch = ffmpeg
