--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.79.0
 ffmpeg-python
 ginza==5.1.2
 google-cloud-storage==2.5.0
+google-cloud-vision==3.3.1
 ja-ginza-electra==5.1.2
 python-multipart==0.0.5
 redis==4.3.4
