--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@830d7967966b92bb357c06c52edf0d39a3e2d89d
 fastapi==0.79.0
 ffmpeg-python
 ginza==5.1.2
 google-cloud-storage==2.5.0
 google-cloud-vision==3.3.1
 ja-ginza-electra==5.1.2
+opencv-python==4.7.0.72
 python-multipart==0.0.5
 redis==4.3.4
 spacy==3.4.1
