--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,7 +10,7 @@ RUN apt-get update -y && \
     add-apt-repository -y ppa:jonathonf/ffmpeg-4 && \
     apt-get install -y ffmpeg
 
-RUN apt-get install -y git gcc g++
+RUN apt-get install -y git gcc g++ make
 
 COPY requirements.txt /requirements.txt
 RUN pip install -U pip wheel cython
@@ -21,11 +21,14 @@ COPY ./app/libs/vision/yolov5/requirements.txt /requirements.yolov5.txt
 RUN pip install -r /requirements.yolov5.txt
 
 
+COPY ./app/libs/alpaca.cpp /chat/alpaca.cpp
+WORKDIR /chat/alpaca.cpp
+RUN make chat
+
 COPY ./app /app
+WORKDIR /app
 
 EXPOSE 8001
-
-WORKDIR /app
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
 
